# C-_yolov5_pybind11

./: CMakeLists.txt  README.md  makefile  makefile_ori  test_yolo_pybind11.py
src/: detector.cpp  main.cpp
